--- a/src/components/ResumeLanguagesAndHobbiesBlock/ResumeLanguagesAndHobbiesBlock.css
+++ b/src/components/ResumeLanguagesAndHobbiesBlock/ResumeLanguagesAndHobbiesBlock.css
@@ -107,20 +107,10 @@
     .ResumeLanguagesAndHobbiesBlock-hobbies {
         padding: 20px;
     }
-
-    .ResumeLanguagesAndHobbiesBlock-hobby {
-        width: 31%;
-        margin: 1%;
-    }
 }
 
 @media only screen and (max-width: 480px) {
     .ResumeLanguagesAndHobbiesBlock-hobbies {
         padding: 20px;
-    }
-
-    .ResumeLanguagesAndHobbiesBlock-hobby {
-        width: 48%;
-        margin: 1%;
     }
 }
